[package]
authors = ['Ethin Probst <harlydavidsen@gmail.com>']
build = 'build.rs'
edition = '2021'
license = 'MPL-2.0'
name = 'kernel'
version = '0.1.0'
resolver="2"

[build-dependencies]
build_details = "0.1.2"
build_script_file_gen = "0.6.1"
rustc_version = "0.4.0"

[dependencies]
spin = "0.9.8"
slab_allocator_rs = "1.0.1"
stivale-boot = "0.3.1"

[dependencies.libk]
path = 'libk'

[dependencies.log]
default-features = false
version = "0.4.17"

[profile.dev]
codegen-units = 2048
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 1
overflow-checks = true
panic = 'abort'
rpath = false

[profile.release]
codegen-units = 1
lto = true
opt-level = 3

[target]

[target.riscv64gc-unknown-none-elf]

[target.riscv64gc-unknown-none-elf.dependencies]
riscv = "0.8.0"

[target.x86_64-unknown-none.dependencies]
uart_16550 = "0.2.18"
x86_64 = { version = "0.14.10", features = ["const_fn", "inline_asm", "abi_x86_interrupt", "nightly"] }


[features]

