[dependencies]
acpi = "4.0.0"
bit_field = "0.10.1"
block_device = "0.1.2"
heapless = "0.7.7"
linked_list_allocator = "0.9.0"
minivec = "0.4.0"
rand_hc = "0.3.1"
raw-cpuid = "10.2.0"
spin = { version = "0.9.2", features = ["ticket_mutex"] }
x86 = "0.43.0"
zerocopy = "0.6.0"
x86_64 = "0.14.6"
voladdress = "0.4.5"
async-recursion = "0.3.2"
bootloader = "0.10.9"

[dependencies.byteorder]
default-features = false
version = "1.4.3"

[dependencies.crossbeam-queue]
default-features = false
features = ['alloc']
version = "0.3.2"

[dependencies.log]
default-features = false
version = "0.4.14"

[dependencies.rand_core]
default-features = false
features = ['alloc']
version = "0.6.3"

[features]
default = ['nvme']
nvme = []

[package]
authors = ['Ethin Probst <ethindp@protonmail.com>']
edition = '2018'
name = 'libk'
version = '0.1.0'
