[dependencies]
acpi = "4.1.0"
bit_field = "0.10.1"
heapless = "0.7.9"
minivec = "0.4.0"
rand_hc = "0.3.1"
raw-cpuid = "10.2.0"
spin = { version = "0.9.2", features = ["ticket_mutex"] }
x86_64 = "0.14.7"
voladdress = "1.0.2"
async-recursion = "0.3.2"
bootloader = "0.10.10"

[dependencies.byteorder]
default-features = false
version = "1.4.3"

[dependencies.crossbeam-queue]
default-features = false
features = ['alloc']
version = "0.3.2"

[dependencies.log]
default-features =false
version = "0.4.14"

[dependencies.rand_core]
default-features = false
features = ['alloc']
version = "0.6.3"

[build-dependencies]
build_script_file_gen = "0.6.1"
compression = { version = "0.1.5", features = ["gzip"] }
pciids = "0.1.4"

[features]
default = []

[package]
authors = ['Ethin Probst <ethindp@protonmail.com>']
edition = '2021'
name = 'libk'
version = '0.1.0'
build = "build.rs"
resolver="2"

