[dependencies]
acpi = "4.1.1"
bit_field = "0.10.1"
heapless = "0.7.16"
minivec = "0.4.0"
rand_hc = "0.3.1"
raw-cpuid = "10.5.0"
spin = { version = "0.9.4", features = ["ticket_mutex"] }
x86_64 = "0.14.10"
voladdress = "1.0.2"
async-recursion = "1.0.0"
blake3 = { version = "1.3.1", default-features = false, features = ["no_avx2", "no_sse41", "no_avx512", "no_sse2", "no_neon"] }
limine = "0.1.8"

[dependencies.byteorder]
default-features = false
version = "1.4.3"

[dependencies.crossbeam-queue]
default-features = false
features = ['alloc']
version = "0.3.6"

[dependencies.log]
default-features = false
version = "0.4.17"

[dependencies.rand_core]
default-features = false
features = ['alloc']
version = "0.6.3"

[build-dependencies]
build_script_file_gen = "0.6.1"
compression = { version = "0.1.5", features = ["gzip"] }
pciids = "0.1.4"

[features]
default = []

[package]
authors = ['Ethin Probst <ethindp@protonmail.com>']
edition = '2021'
name = 'libk'
version = '0.1.0'
build = "build.rs"
resolver="2"

