[package]
name = "nvme"
version = "0.1.0"
authors = ["Ethin Probst <ethindp@protonmail.com>"]
edition = "2018"

[dependencies]
voladdress = {git = "https://github.com/rust-console/voladdress"}
log = {version = "^0.4.11", default-features=false}
x86 = "^0.34.0"
bit_field = {git = "https://github.com/ethindp/rust-bit-field"}
atomic = "^0.5.0"
heapless = "^0.5.5"
zerocopy = "^0.3.0"
static_assertions = "^1.1.0"
lazy_static = {version = "^1.4.0", features=["spin_no_std"]}
spin = "^0.5.2"
dia-semver = "^8.0.1"
libk = {path = "../../../libk"}
